<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:gravity="bottom|right">

    <ImageView android:src="@drawable/splash_1280_720"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="0"
        android:orientation="vertical" 
        android:gravity="bottom|right">

        <RelativeLayout
            android:id="@+id/downloaderDashboard"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:gravity="bottom|right">

           <TextView
                android:id="@+id/statusText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:layout_above="@+id/progressLayout"
                android:textColor="@color/text_color"
                android:textSize="22dp"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/progressLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="10dp"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/progressAsFraction"
                    style="@android:style/TextAppearance.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/text_color"
                    android:text="0MB / 0MB" >
                </TextView>

                <TextView
                    android:id="@+id/progressAsPercentage"
                    style="@android:style/TextAppearance.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@+id/progressBar"
                    android:textColor="@color/text_color"
                    android:text="0%" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/progressAsFraction"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/progressAverageSpeed"
                    style="@android:style/TextAppearance.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/progressBar"
                    android:textColor="@color/text_color"
                    android:layout_marginLeft="5dp" />

                <TextView
                    android:id="@+id/progressTimeRemaining"
                    style="@android:style/TextAppearance.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@+id/progressBar"
                    android:textColor="@color/text_color"
                    android:layout_below="@+id/progressBar" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/downloaderDashboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/pauseButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="0"
                    android:minHeight="40dp"
                    android:minWidth="94dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/text_button_pause" />

                <Button
                    android:id="@+id/cancelButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="0"
                    android:minHeight="40dp"
                    android:minWidth="94dp"
                    android:text="@string/text_button_cancel"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:visibility="gone" />
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/approveCellular"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:visibility="gone"
        android:gravity="bottom|right">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:id="@+id/textPausedParagraph1"
            android:textColor="@color/text_color"
            android:textStyle="bold"
            android:layout_alignParentTop="true"
            android:text="@string/text_paused_cellular" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:id="@+id/textPausedParagraph2"
            android:textColor="@color/text_color"
            android:textStyle="bold"
            android:layout_below="@+id/textPausedParagraph1"
            android:text="@string/text_paused_cellular_2" />

        <LinearLayout
            android:id="@+id/buttonRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/resumeOverCellular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_alignParentBottom="true"
                android:layout_toLeftOf="@+id/wifiSettingsButton"
                android:text="@string/text_button_resume_cellular" />

            <Button
                android:id="@+id/wifiSettingsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:text="@string/text_button_wifi_settings" />
        </LinearLayout>
    </RelativeLayout>

</AbsoluteLayout>